# sysmon

./: CMakeLists.txt
interfaces/: CMakeLists.txt
interfaces/include/: monitorplugininterface.h
plugins/: CMakeLists.txt
plugins/cpu/: CMakeLists.txt  cpumonitor.cpp  cpumonitor.h
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
